--- a/ui_layerlistcreator.ui
+++ b/ui_layerlistcreator.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>layerListCreator</string>
+   <string>Skapa Lagerlista för Ladda Lager plugin</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
